k8/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: app-service-account
      containers:
        - name: worker
          image: 760773573647.dkr.ecr.us-east-1.amazonaws.com/ENVIRONMENT-worker:IMAGE_TAG
