k8/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: app-service-account
      containers:
        - name: api
          image: 760773573647.dkr.ecr.us-east-1.amazonaws.com/ENVIRONMENT-api:IMAGE_TAG
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 5000
